--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,10 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.background": "#045B62",
-        "titleBar.activeBackground": "#05767F",
-        "titleBar.activeForeground": "#EDFDFE",
-        "statusBar.background": "#05767F",
+        "activityBar.background": "#9abccb",
+        "activityBar.foreground": "#000000",
+        "titleBar.activeBackground": "#de9e86",
+        "titleBar.activeForeground": "#000000",
+        "statusBar.background": "#76909b",
         "statusBar.foreground": "#EDFDFE"
     }
 }
