--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "dependencies": {
     "@astrojs/cloudflare": "^12.5.4",
     "astro": "^5.9.2"
+  },
+  "devDependencies": {
+    "wrangler": "^4.20.0"
   }
 }
